Fix language dropdown alignment on iOS

--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -69,7 +69,7 @@ body .root .content.theme {
         text-align: right;
         ul {
           position:relative;
-          right: 82px;
+          right: 75px;
           li {
             align-items: center;
             font-family: "Kanit Regular";
@@ -144,7 +144,7 @@ body .root .content.theme.ar {
       .react-select.language {
         ul {
           top: 15px;
-          right: 65px;
+          right: 55px;
         }
         .selected-option.ar {
           font-size: x-large;
